--- a/vignettes/xms.html
+++ b/vignettes/xms.html
@@ -1711,7 +1711,7 @@ Female
 </div>
 <div id="statistical-method" class="section level3">
 <h3>Statistical Method</h3>
-<p>A chi-square trend test also called the Cochran-Armitage test for trend was appropriate for testing association between a nominal variable with two levels (opinion) and an ordinal variable (say year).</p>
+<p>A <strong>hypothesis based </strong> chi-square trend test also called the Cochran-Armitage test for trend was appropriate for testing association between a nominal variable with two levels (opinion) and an ordinal variable (say year). Confidence are not available for this test.</p>
 </div>
 <div id="test-results" class="section level3">
 <h3>Test Results</h3>
@@ -2281,7 +2281,7 @@ Non-Traditional
 </div>
 <div id="statistical-method-1" class="section level3">
 <h3>Statistical Method</h3>
-<p>A chi-square test of independence was used to test for an association between opinion and all levels of the region variable at once. To evaluate the differences in proportion of opinion across regions, multiple difference in proportion tests were performed.</p>
+<p>A chi-square test of independence was used to test for an association between opinion and all levels of the region variable at once. To evaluate the differences in proportion of opinion across regions, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.</p>
 </div>
 <div id="test-results-1" class="section level3">
 <h3>Test Results</h3>
@@ -3050,7 +3050,7 @@ Non-Traditional
 </div>
 <div id="statistical-method-2" class="section level3">
 <h3>Statistical Method</h3>
-<p>A chi-square test of independence was used to test for an association between opinion and all levels of the class variable at once. To evaluate the differences in proportion of opinion across classes, multiple difference in proportion tests were performed.</p>
+<p>A chi-square test of independence was used to test for an association between opinion and all levels of the class variable at once. To evaluate the differences in proportion of opinion across classes, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.</p>
 </div>
 <div id="test-results-2" class="section level3">
 <h3>Test Results</h3>
@@ -3516,7 +3516,7 @@ Non-Traditional
 </div>
 <div id="statistical-method-3" class="section level3">
 <h3>Statistical Method</h3>
-<p>To test the association between opinion and gender, the difference in proportion of opinion between genders was computed with p-values and 95% confidence intervals for the true differences in opinion.</p>
+<p>To test the association between opinion and gender, the difference in proportion of opinion between genders was computed with p-values and 95% confidence intervals for the true differences in opinion. The results of both the hypothesis test and confidence interval approaches were compared for agreement.</p>
 </div>
 <div id="test-results-3" class="section level3">
 <h3>Test Results</h3>
@@ -3876,7 +3876,7 @@ Non-Traditional
 </div>
 <div id="statistical-method-4" class="section level3">
 <h3>Statistical Method</h3>
-<p>A chi-square test of independence was used to test for an association between opinion and all levels of the age variable at once. To evaluate the differences in proportion of opinion across ages, multiple difference in proportion tests were performed.</p>
+<p>A chi-square test of independence was used to test for an association between opinion and all levels of the age variable at once. To evaluate the differences in proportion of opinion across ages, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.</p>
 </div>
 <div id="test-results-4" class="section level3">
 <h3>Test Results</h3>
@@ -4468,7 +4468,7 @@ Non-Traditional
 </div>
 <div id="statistical-method-5" class="section level3">
 <h3>Statistical Method</h3>
-<p>A chi-square test of independence was used to test for an association between opinion and all levels of the marital status variable at once. To evaluate the differences in proportion of opinion by marital status, multiple difference in proportion tests were performed.</p>
+<p>A chi-square test of independence was used to test for an association between opinion and all levels of the marital status variable at once. To evaluate the differences in proportion of opinion by marital status, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.</p>
 </div>
 <div id="test-results-5" class="section level3">
 <h3>Test Results</h3>
@@ -5121,7 +5121,7 @@ The greatest proportion of non-traditional opinion among the 25-44 age group vis
 <p><strong>Nature of Opinion</strong><br />
 Opinions with respect to extra-marital conduct ranged from always or almost always wrong (traditional opinion) to sometimes wrong and not wrong at all (non-traditional opinion). Geographic region, age, gender, marital status are significant indicators of opinion, but not in any surprising ways. Naturally, people in the Northeast and Pacific regions have the highest proportions of people with non-traditional opinions and women are less likely than men to have such views. The younger generations tend to have the more liberal perspectives and the highest proportions of non-traditional opinion were among the separated and divorced. No surprises here.</p>
 <p><strong>Evolution of Opinion</strong><br />
-That said, a shift in beliefs and opinions w.r.t. extra-marital conduct is definitely extant in the data. From the early 70’s until about 2002, the trend was towards increasingly conservative thought and opinion, perhaps a natural retraction or readjustment following the sexual revolution of the 60’s and 70’s. However, 2002 and 2012 mark inflection points of shifting opinions and attitudes regarding extra-marital conduct. From 2012-2016 the proportion of non-traditional opinion increased by 42%. The most significant increase was among women where the proportion of non-traditional opinion grew 51% from 0.06 in 2,012 to 0.1 in 2,016. This conflates with the coming of age of a new generation characterized by diminished deference for marriage as an institution, increasing acceptance of same-sex marriage, and the (re) emergence of open marriages, consensual non-monogamy relationships and the like.</p>
+That said, a shift in beliefs and opinions w.r.t. extra-marital conduct is definitely extant in the data. From the early 70’s until about 2002, the trend was towards increasingly conservative thought and opinion, perhaps a natural retraction or readjustment following the sexual revolution of the 60’s and 70’s. However, 2002 and 2012 mark inflection points of shifting opinions and attitudes regarding extra-marital conduct. From 2012-2016 the proportion of non-traditional opinion increased by 42%. The most significant increase was among women where the proportion of non-traditional opinion grew 51% from 0.06 in 2012 to 0.1 in 2016. This conflates with the coming of age of a new generation characterized by diminished deference for marriage as an institution, increasing acceptance of same-sex marriage, and the (re) emergence of open marriages, consensual non-monogamy relationships and the like.</p>
 <p>A dramatic shift in marriage as an institution is afoot. Expectations of marriage “until death do us part” are changing and increasing numbers of men and woman admit to having had extra-marital affairs. Social networks have dramatically shifted the scope, range, frequency, and opportunity for interaction. All these factors conflate to produce the phenomena responsible for much of the societal changes we observe. Future studies might explore the factors, such as social networks, that (re)shape our deference for an belief in many of our institutions.</p>
 </div>
 <div id="appendix" class="section level1">
